# dotflow-api

./: .gitignore  README.md  pyproject.toml
.draft/: auth.py
app/: __init__.py  __main__.py  main.py
app/api/: ping.py
app/api/v1/: routers.py
app/api/v1/endpoints/: __init__.py  task.py  workflow.py
app/core/: errors.py
app/core/database/: database_repository.py  session.py
app/repository/: task_repository.py
app/services/: task_service.py
src/: main.py
src/api/v1/: routers.py
tests/: conftest.py  database.py
tests/api/: test_ping.py
